// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid.js /> Debe mostrar items cuando se cargan imágenes con useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    One piece
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Una imagen"
      url="https://localhost/imagen.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid.js /> Debe mostrarse correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    One piece
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading..
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
